; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/dac/extr_stm32-dac.c_stm32_dac_set_value.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/dac/extr_stm32-dac.c_stm32_dac_set_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stm32_dac = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@STM32_DAC_DHR12R1 = common dso_local global i32 0, align 4
@STM32_DAC_DHR12R2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.stm32_dac*, i32, i32)* @stm32_dac_set_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stm32_dac_set_value(%struct.stm32_dac* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.stm32_dac*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.stm32_dac* %0, %struct.stm32_dac** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %5, align 4
  %9 = call i64 @STM32_DAC_IS_CHAN_1(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %20

11:                                               ; preds = %3
  %12 = load %struct.stm32_dac*, %struct.stm32_dac** %4, align 8
  %13 = getelementptr inbounds %struct.stm32_dac, %struct.stm32_dac* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @STM32_DAC_DHR12R1, align 4
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @regmap_write(i32 %16, i32 %17, i32 %18)
  store i32 %19, i32* %7, align 4
  br label %29

20:                                               ; preds = %3
  %21 = load %struct.stm32_dac*, %struct.stm32_dac** %4, align 8
  %22 = getelementptr inbounds %struct.stm32_dac, %struct.stm32_dac* %21, i32 0, i32 0
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @STM32_DAC_DHR12R2, align 4
  %27 = load i32, i32* %6, align 4
  %28 = call i32 @regmap_write(i32 %25, i32 %26, i32 %27)
  store i32 %28, i32* %7, align 4
  br label %29

29:                                               ; preds = %20, %11
  %30 = load i32, i32* %7, align 4
  ret i32 %30
}

declare dso_local i64 @STM32_DAC_IS_CHAN_1(i32) #1

declare dso_local i32 @regmap_write(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
